[tool.poetry]
name = "whereisit"
version = "0.1.0"
description = ""
authors = ["Eyal <eyalgolan96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
requests = "^2.32.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
setuptools = "^70.0.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
